--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>REST Samples</title>
+<title>REST samples</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="Alexander Schwartz">
@@ -42,85 +42,96 @@ body {
 
 <!-- Fav and touch icons -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144"
-	href="../assets/ico/apple-touch-icon-144-precomposed.png">
+  href="../assets/ico/apple-touch-icon-144-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="114x114"
-	href="../assets/ico/apple-touch-icon-114-precomposed.png">
+  href="../assets/ico/apple-touch-icon-114-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="72x72"
-	href="../assets/ico/apple-touch-icon-72-precomposed.png">
+  href="../assets/ico/apple-touch-icon-72-precomposed.png">
 <link rel="apple-touch-icon-precomposed"
-	href="../assets/ico/apple-touch-icon-57-precomposed.png">
+  href="../assets/ico/apple-touch-icon-57-precomposed.png">
 <link rel="shortcut icon" href="../assets/ico/favicon.png">
 </head>
 
 <body>
 
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container-fluid">
-				<button type="button" class="btn btn-navbar" data-toggle="collapse"
-					data-target=".nav-collapse">
-					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="brand" href="#">REST Samples</a>
-				<div class="nav-collapse collapse">
-					<p class="navbar-text pull-right">
-						<!--  Logged in as <a href="#" class="navbar-link">Username</a> -->
-					</p>
-					<ul class="nav" data-bind="foreach: menu.folders">
-						<li
-							data-bind="css: { active: $data.link == $parent.menu.folder() }, attr: {id: $data.link} "><a
-							data-bind="text: $data.name, attr: {href: $data.link}"></a></li>
-					</ul>
-				</div>
-				<!--/.nav-collapse -->
-			</div>
-		</div>
-	</div>
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container-fluid">
+        <button type="button" class="btn btn-navbar"
+          data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span> <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="brand" href="#"
+          data-bind="text: ko.i18n('main.title')"></a>
+        <div class="nav-collapse collapse">
+          <p class="navbar-text pull-right">
+            <!--  Logged in as <a href="#" class="navbar-link">Username</a> -->
+            <!-- START SNIPPET: i18next6 -->
+            <select class="input-mini" style="background-color: #1b1b1b"
+              data-bind="value: menu.language">
+              <option>de</option>
+              <option>en</option>
+            </select>
+            <!-- END SNIPPET: i18next6 -->
+          </p>
+          <ul class="nav" data-bind="foreach: menu.folders">
+            <li
+              data-bind="css: { active: $data.link == $parent.menu.folder() }, attr: {id: $data.link} "><a
+              data-bind="text: $data.name, attr: {href: $data.link}"></a></li>
+          </ul>
+        </div>
+        <!--/.nav-collapse -->
+      </div>
+    </div>
+  </div>
 
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span3">
-				<div class="well sidebar-nav">
-					<ul class="nav nav-list">
-						<li class="nav-header">Sidebar</li>
-						<!-- ko foreach: menu.subfolders -->
-						<li
-							data-bind="css: { active: $parent.menu.isCurrentSubfolder($data.link) }, attr: {id: 'subfolder' + $index()}"><a
-							data-bind="text: $data.name, attr: {href: $data.link}"]></a></li>
-						<!-- /ko -->
-					</ul>
-				</div>
-				<!--/.well -->
-			</div>
-			<!--/span-->
-			<div class="span9">
-				<div id="content" data-bind="with: currentSection">
-					<!-- ko if: style -->
-					<link rel="stylesheet" type="text/css"
-						data-bind="attr: { href: 'css/' + style + '.css' }" />
-					<!-- /ko -->
-					<div
-						data-bind="template: { name: template, 'if': data, data: data }"></div>
-				</div>
-			</div>
-			<!--/span-->
-		</div>
-		<!--/row-->
+  <div class="container-fluid">
+    <div class="row-fluid">
+      <div class="span3">
+        <div class="well sidebar-nav">
+          <ul class="nav nav-list">
+            <!-- START SNIPPET: i18next2 -->
+            <li class="nav-header"
+              data-bind="text: ko.i18n('sidebar.title')"></li>
+            <!-- END SNIPPET: i18next2 -->
+            <!-- ko foreach: menu.subfolders -->
+            <li
+              data-bind="css: { active: $parent.menu.isCurrentSubfolder($data.link) }, attr: {id: 'subfolder' + $index()}"><a
+              data-bind="text: $data.name, attr: {href: $data.link}"]></a></li>
+            <!-- /ko -->
+          </ul>
+        </div>
+        <!--/.well -->
+      </div>
+      <!--/span-->
+      <div class="span9">
+        <div id="content" data-bind="with: currentSection">
+          <!-- ko if: style -->
+          <link rel="stylesheet" type="text/css"
+            data-bind="attr: { href: 'css/' + style + '.css' }" />
+          <!-- /ko -->
+          <div
+            data-bind="template: { name: template, 'if': data, data: data }"></div>
+        </div>
+      </div>
+      <!--/span-->
+    </div>
+    <!--/row-->
 
-		<hr>
+    <hr>
 
-		<footer>
-			<p>&copy; Company 2013</p>
-		</footer>
+    <footer>
+      <p>&copy; Company 2013</p>
+    </footer>
 
-	</div>
-	<!--/.fluid-container-->
+  </div>
+  <!--/.fluid-container-->
 
-	<!-- Le javascript
+  <!-- Le javascript
     ================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script data-main="js/main" src="js/libs/require.js"></script>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script data-main="js/main" src="js/libs/require.js"></script>
 
 </body>
 </html>
