--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -131,7 +131,9 @@ body {
   <!-- Le javascript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
+  <!-- START SNIPPET: requirejs1 -->
   <script data-main="js/main" src="js/libs/require.js"></script>
+  <!-- END SNIPPET: requirejs1 -->
 
 </body>
 </html>
